--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,8 +1,13 @@
 {
-	"K 均值聚类算法可视化": "K 均值聚类算法可视化",
-	"源代码": "源代码",
-	"在紫竹叽歪上查看更多": "在紫竹叽歪上查看更多",
-	"en": "en",
-	"EJS/html 转成 Jade/pug": "EJS/html 转成 Jade/pug",
-	"更多叽歪出品": "更多叽歪出品"
+  "K 均值聚类算法可视化": "K 均值聚类算法可视化",
+  "源代码": "源代码",
+  "在紫竹叽歪上查看更多": "在紫竹叽歪上查看更多",
+  "en": "English",
+  "EJS/html 转成 Jade/pug": "EJS/html 转成 Jade/pug",
+  "更多叽歪出品": "更多叽歪出品",
+  "Why": "为什么",
+  "should I convert my `ejs`/`html` to `jade`/`pug`?": "我应该将`ejs`/`html`转换成`jade`/`pug`?",
+  "`EJS` is simple but stupid, it doesn't have layout. Don't use it, use `jade/pug` instead. It's elegant and fast for developing.": "`EJS`非常简单明了, 但是功能太少, 甚至都不支持 layout! 别用它了, 改用 `jade/pug` 。它多么优雅, 而且帮助你快速开发 。",
+  "`Html` is good for browser to render, but it's silly for coding. `jade/pug` helps you not getting lost in the messy tags.": "`Html` 方便浏览器渲染, 但是你在写那一堆大于号小于号的标签时不觉得很愚蠢么? `jade/pug` 保证不会让你迷失在那一堆杂乱的代码中。另外它的 `mixin` 等功能会让你尖叫!",
+  "编译状态": "编译状态"
 }
